# protobluff

./: .clang_complete  .codecov.yml  .gdbinit  .gitignore  .travis.sh  .travis.yml  404.html  CHANGELOG  LICENSE  MIGRATION  Makefile.am  README.md  autogen.sh  configure.ac  index.html  mkdocs.yml  sitemap.xml  valgrind.supp
design-rationale/: index.html
doc/: design-rationale.md  getting-started.md  similar-projects.md
doc/guide/: allocators.md  binaries.md  buffers-and-journals.md  error-handling.md  messages.md  scalar-values.md
docs/: design-rationale.md  getting-started.md  index.md  similar-projects.md
docs/guide/: allocators.md  buffers-and-journals.md  error-handling.md  messages.md  miscellaneous.md  repeated-fields.md  runtimes.md  scalar-types.md
examples/: Makefile.am
examples/decoding/: Makefile.am  example.c  person.proto
examples/encoding/: Makefile.am  example.c  person.proto
examples/messages/: Makefile.am  example.c  person.proto
getting-started/: index.html
guide/allocators/: index.html
guide/buffers-and-journals/: index.html
guide/error-handling/: index.html
guide/messages/: index.html
guide/miscellaneous/: index.html
guide/repeated-fields/: index.html
guide/runtimes/: index.html
guide/scalar-types/: index.html
include/: Makefile.am  protobluff.h
include/protobluff/: allocator.h  binary.h  common.h  core.h  cursor.h  descriptor.h  enum.h  field.h  message.h  part.h  string.h  util.h
include/protobluff/core/: allocator.h  buffer.h  common.h  decoder.h  descriptor.h  encoder.h  string.h
include/protobluff/enum/: descriptor.h
include/protobluff/field/: descriptor.h
include/protobluff/message/: buffer.h  common.h  cursor.h  descriptor.h  field.h  journal.h  message.h  nested.h  oneof.h  part.h
include/protobluff/util/: chunk_allocator.h  descriptor.h  validator.h
search/: search_index.json
similar-projects/: index.html
src/: Makefile.am  protobluff-lite.pc.in  protobluff.pc.in
src/core/: Makefile.am  allocator.c  allocator.h  buffer.c  buffer.h  common.h  decoder.c  decoder.h  descriptor.c  descriptor.h  encoder.c  encoder.h  stream.c  stream.h  varint.c  varint.h
src/generator/: Makefile.am  enum.cc  enum.hh  enum_value.cc  enum_value.hh  extension.cc  extension.hh  field.cc  field.hh  file.cc  file.hh  generator.cc  generator.hh  message.cc  message.hh  oneof.cc  oneof.hh  protoc-gen-protobluff  protoc-gen-protobluff.cc  strutil.cc  strutil.hh
src/lib/: .linter-clang-flags  .linter-clang-includes  Makefile.am  allocator.c  allocator.h  binary.c  binary.h  common.c  common.h  cursor.c  cursor.h  field.c  field.h  journal.c  journal.h  libprotobluff.pc.in  message.c  message.h  part.c  part.h
src/lib/allocator/: chunk.c  chunk.h
src/lib/binary/: buffer.c  buffer.h  stream.c  stream.h
src/lib/enum/: descriptor.c  descriptor.h
src/lib/field/: descriptor.c  descriptor.h
src/lib/message/: descriptor.c  descriptor.h  nested.c  nested.h
src/message/: Makefile.am  buffer.c  buffer.h  common.c  common.h  cursor.c  cursor.h  field.c  field.h  journal.c  journal.h  message.c  message.h  nested.c  nested.h  oneof.c  oneof.h  part.c  part.h
src/util/: Makefile.am  chunk_allocator.c  chunk_allocator.h  descriptor.c  descriptor.h  validator.c  validator.h
tests/: Makefile.am  coverage.css
tests/allocator-chunk/: Makefile.am  test.c
tests/binary/: Makefile.am  test.c
tests/binary-buffer/: Makefile.am  test.c
tests/binary-stream/: Makefile.am  test.c
tests/core/: Makefile.am
tests/core/buffer/: Makefile.am  test.c
tests/core/decoder/: Makefile.am  test.c
tests/core/descriptor/: Makefile.am  test.c
tests/core/encoder/: Makefile.am  test.c
tests/core/stream/: Makefile.am  test.c
tests/core/varint/: Makefile.am  test.c
tests/cursor/: Makefile.am  test.c
tests/enum-descriptor/: Makefile.am  test.c
tests/field/: Makefile.am  test.c
tests/journal/: Makefile.am  test.c
tests/message/: Makefile.am  test.c
tests/message-descriptor/: Makefile.am  test.c
tests/message-nested/: Makefile.am  test.c
tests/message/buffer/: Makefile.am  test.c
tests/message/cursor/: Makefile.am  test.c
tests/message/field/: Makefile.am  test.c
tests/message/journal/: Makefile.am  test.c
tests/message/message/: Makefile.am  test.c
tests/message/nested/: Makefile.am  test.c
tests/message/oneof/: Makefile.am  test.c
tests/message/part/: Makefile.am  test.c
tests/part/: test.c
tests/util/: Makefile.am
tests/util/chunk_allocator/: Makefile.am  test.c
tests/util/descriptor/: Makefile.am  test.c
tests/util/validator/: Makefile.am  test.c
tools/coverage/: Makefile.am  coverage.css
