# Copyright (c) 2013-2020 Martin Donath <martin.donath@squidfunk.com>

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to
# deal in the Software without restriction, including without limitation the
# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
# sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

# -----------------------------------------------------------------------------
# Public header files: libprotobluff
# -----------------------------------------------------------------------------

# Don't rebase libprotobluff public header files
nobase_include_HEADERS = \
	protobluff/core/allocator.h \
	protobluff/core/buffer.h \
	protobluff/core/common.h \
	protobluff/core/decoder.h \
	protobluff/core/descriptor.h \
	protobluff/core/encoder.h \
	protobluff/core/string.h \
	protobluff/core.h \
	protobluff/descriptor.h \
	protobluff/message/buffer.h \
	protobluff/message/common.h \
	protobluff/message/cursor.h \
	protobluff/message/field.h \
	protobluff/message/journal.h \
	protobluff/message/message.h \
	protobluff/message/nested.h \
	protobluff/message/oneof.h \
	protobluff/message/part.h \
	protobluff/message.h \
	protobluff/util/chunk_allocator.h \
	protobluff/util/descriptor.h \
	protobluff/util/validator.h \
	protobluff/util.h \
	protobluff.h
